// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`animal@2 golden output > flat art, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 62.95,
  "drawCalls": 31887,
  "drawing": "e574b568b7affdfa",
  "lipGapPx": 82.45,
  "mesh": "4a59aee157ac55ad",
}
`;

exports[`animal@2 golden output > flat art, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 1.01,
  "drawCalls": 31804,
  "drawing": "5a9704d7ed3c4245",
  "lipGapPx": 1.14,
  "mesh": "57e4ea5e40975dff",
}
`;

exports[`animal@2 golden output > flat art, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 31.83,
  "drawCalls": 31887,
  "drawing": "c21c7f903ec29d4b",
  "lipGapPx": 40.55,
  "mesh": "af0958e534ff84f1",
}
`;

exports[`animal@2 golden output > flat art, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 100.5,
  "drawCalls": 31887,
  "drawing": "cb5b975152e98994",
  "lipGapPx": 126.24,
  "mesh": "82cd63b50d8eb967",
}
`;

exports[`animal@2 golden output > flat art, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31962,
  "drawing": "53e70ba05811c31b",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`animal@2 golden output > flat art, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 73.97,
  "drawCalls": 31887,
  "drawing": "9c2ab5518a564512",
  "lipGapPx": 93.08,
  "mesh": "4065c68dbecd130d",
}
`;

exports[`animal@2 golden output > flat art, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31804,
  "drawing": "25d84c63d293f12f",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`animal@2 golden output > render, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 62.95,
  "drawCalls": 31985,
  "drawing": "9ee5c356b2b806b6",
  "lipGapPx": 82.45,
  "mesh": "4a59aee157ac55ad",
}
`;

exports[`animal@2 golden output > render, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 1.01,
  "drawCalls": 31804,
  "drawing": "5a9704d7ed3c4245",
  "lipGapPx": 1.14,
  "mesh": "57e4ea5e40975dff",
}
`;

exports[`animal@2 golden output > render, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 31.83,
  "drawCalls": 31985,
  "drawing": "656d6830bf18a766",
  "lipGapPx": 40.55,
  "mesh": "af0958e534ff84f1",
}
`;

exports[`animal@2 golden output > render, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 100.5,
  "drawCalls": 31985,
  "drawing": "99b63d80e1034a32",
  "lipGapPx": 126.24,
  "mesh": "82cd63b50d8eb967",
}
`;

exports[`animal@2 golden output > render, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32074,
  "drawing": "407a8adada3c8908",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`animal@2 golden output > render, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 73.97,
  "drawCalls": 31985,
  "drawing": "5991aac2221ea8ac",
  "lipGapPx": 93.08,
  "mesh": "4065c68dbecd130d",
}
`;

exports[`animal@2 golden output > render, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31804,
  "drawing": "25d84c63d293f12f",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`toon@1 golden output > flat art, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 55.37,
  "drawCalls": 31931,
  "drawing": "33fee74603c492cc",
  "lipGapPx": 73,
  "mesh": "49e20356bec49b07",
}
`;

exports[`toon@1 golden output > flat art, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 16.54,
  "drawCalls": 31890,
  "drawing": "c074693b6304f04c",
  "lipGapPx": 26.31,
  "mesh": "2525b14e3d19b160",
}
`;

exports[`toon@1 golden output > flat art, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 27.7,
  "drawCalls": 31931,
  "drawing": "3b68fce7ea416139",
  "lipGapPx": 35.39,
  "mesh": "2084365dba891f23",
}
`;

exports[`toon@1 golden output > flat art, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 87.41,
  "drawCalls": 31931,
  "drawing": "dc2a2f1fcdc18f0a",
  "lipGapPx": 109.91,
  "mesh": "2a60984d94202c64",
}
`;

exports[`toon@1 golden output > flat art, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31962,
  "drawing": "53e70ba05811c31b",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`toon@1 golden output > flat art, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 64.32,
  "drawCalls": 31931,
  "drawing": "9cbf8b44db12f0b6",
  "lipGapPx": 81.05,
  "mesh": "7371442ac2267393",
}
`;

exports[`toon@1 golden output > flat art, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31804,
  "drawing": "25d84c63d293f12f",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`toon@1 golden output > render, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 55.37,
  "drawCalls": 32042,
  "drawing": "a3f767e32a2dcac4",
  "lipGapPx": 73,
  "mesh": "49e20356bec49b07",
}
`;

exports[`toon@1 golden output > render, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 16.54,
  "drawCalls": 31951,
  "drawing": "0b416ec37585e822",
  "lipGapPx": 26.31,
  "mesh": "2525b14e3d19b160",
}
`;

exports[`toon@1 golden output > render, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 27.7,
  "drawCalls": 32042,
  "drawing": "9c19430410b75e33",
  "lipGapPx": 35.39,
  "mesh": "2084365dba891f23",
}
`;

exports[`toon@1 golden output > render, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 87.41,
  "drawCalls": 32042,
  "drawing": "5d3f69ccf76a004f",
  "lipGapPx": 109.91,
  "mesh": "2a60984d94202c64",
}
`;

exports[`toon@1 golden output > render, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32074,
  "drawing": "407a8adada3c8908",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`toon@1 golden output > render, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 64.32,
  "drawCalls": 32042,
  "drawing": "215d3b118ee23a14",
  "lipGapPx": 81.05,
  "mesh": "7371442ac2267393",
}
`;

exports[`toon@1 golden output > render, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31804,
  "drawing": "25d84c63d293f12f",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;
